--- a/Example project/Config/DefaultEngine.ini
+++ b/Example project/Config/DefaultEngine.ini
@@ -1,18 +1,6 @@
 [URL]
 GameName=MyProject2
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Prototype/Arena.Arena
-GameDefaultMap=/Game/Prototype/Arena.Arena
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Script/Engine.GameMode
-GlobalDefaultGameMode=/Game/FlyingBP/Blueprints/FlyingGameMode.FlyingGameMode_C
-GlobalDefaultServerGameMode=None
-GameInstanceClass=/Game/NewBlueprint.NewBlueprint_C
-
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
 bSupportsPortraitOrientation=False
@@ -74,3 +62,20 @@ AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Prototype/Arena.Arena
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Game/NewBlueprint.NewBlueprint_C
+GameDefaultMap=/Game/Prototype/Arena.Arena
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultServerGameMode=None
+
+
