--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -132,7 +132,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Scot/Scotts_UI/Menus
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -141,6 +141,7 @@ LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/spherecollider.spherecollider
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
@@ -161,7 +162,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/w9144603/Documents/GitHub/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
+UNR=../../../../../../Users/v8091856/Desktop/Hybrid-Games---Untitled-cybersled-game/Example project/Content/Prototype
 BRUSH=D:/UnrealProjects/MyProject2/Content/
 FBX=D:/UnrealProjects/MyProject2/Content/
 FBXAnim=D:/UnrealProjects/MyProject2/Content/
@@ -863,19 +864,23 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem1=/Game/Scot/Scotts_UI/Menus/Settings_WG
-MRUItem2=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem3=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem4=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem5=/Game/Main_Menu
-MRUItem6=/Game/NewBlueprint
-MRUItem7=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
-MRUItem8=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem9=/Game/Scot/Scotts_UI/Enemy_Trace_WG
-MRUItem10=/Game/Hasiel/Maya_Map
-MRUItem11=/Game/Hasiel/NewMap
-MRUItem12=/Game/FlyingExampleMap
+MRUItem0=/Game/spherecollider
+MRUItem1=/Game/sphereworldcollider
+MRUItem2=/Game/Arena_obj
+MRUItem3=/Game/Blueprints/NewGameMode
+MRUItem4=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem5=/Game/Scot/Scotts_UI/Menus/Settings_WG
+MRUItem6=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem7=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem8=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem9=/Game/Main_Menu
+MRUItem10=/Game/NewBlueprint
+MRUItem11=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem12=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem13=/Game/Scot/Scotts_UI/Enemy_Trace_WG
+MRUItem14=/Game/Hasiel/Maya_Map
+MRUItem15=/Game/Hasiel/NewMap
+MRUItem16=/Game/FlyingExampleMap
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1215,6 +1220,80 @@ EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+NewGameMode_C.Tick=True
+NewGameMode_C.Classes=True
+NewGameMode_C.Game=True
+NewGameMode_C.GameMode=True
+SkeletalMeshActor.TransformCommon=True
+SkeletalMeshActor.Animation=True
+SkeletalMeshActor.Mesh=True
+SkeletalMeshActor.Materials=True
+SkeletalMeshActor.Clothing=True
+SkeletalMeshActor.Physics=True
+SkeletalMeshActor.Collision=True
+SkeletalMeshActor.ClothingSimulation=True
+SkeletalMeshActor.Lighting=True
+SkeletalMeshActor.Rendering=True
+SkeletalMeshActor.Tags=True
+SkeletalMeshActor.Activation=True
+SkeletalMeshActor.Cooking=True
+SkeletalMeshActor.Replication=True
+SkeletalMeshActor.Input=True
+SkeletalMeshActor.Actor=True
+Arena_obj_C.Tick=True
+Arena_obj_C.Rendering=True
+Arena_obj_C.Replication=True
+Arena_obj_C.Input=True
+Arena_obj_C.Actor=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Mobile=True
+Arena_obj_C.TransformCommon=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+sphereworldcollider_C.Tick=True
+sphereworldcollider_C.Rendering=True
+sphereworldcollider_C.Replication=True
+sphereworldcollider_C.Input=True
+sphereworldcollider_C.Actor=True
+sphereworldcollider_C.TransformCommon=True
+SphereComponent.Variable=True
+SphereComponent.TransformCommon=True
+SphereComponent.Sockets=True
+SphereComponent.Shape=True
+SphereComponent.Navigation=True
+SphereComponent.Rendering=True
+SphereComponent.Physics=True
+SphereComponent.Collision=True
+SphereComponent.Tags=True
+SphereComponent.ComponentReplication=True
+SphereComponent.Cooking=True
+SphereComponent.Events=True
+spherecollider_C.Tick=True
+spherecollider_C.Rendering=True
+spherecollider_C.Replication=True
+spherecollider_C.Input=True
+spherecollider_C.Actor=True
+spherecollider_C.TransformCommon=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=1
@@ -1229,6 +1308,19 @@ K2Node_VariableGet.DefaultValueCategory=True
 /Game/Scot/Scotts_UI/Menus/TournamentLadder_WG.TournamentLadder_WG=1
 
 [PlacementMode]
+RecentlyPlaced=/Game/spherecollider.spherecollider;
+RecentlyPlaced=/Game/sphereworldcollider.sphereworldcollider;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Arena_obj.Arena_obj;
+RecentlyPlaced=/Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin;
+RecentlyPlaced=/Game/Flying/Meshes/UFO.UFO;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Concrete_Tiles.M_Concrete_Tiles;
+RecentlyPlaced=/Game/StarterContent/Materials/M_CobbleStone_Rough.M_CobbleStone_Rough;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Cut_Stone.M_Brick_Cut_Stone;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Hasiel/Maya_Map.Maya_Map;
 
@@ -1309,10 +1401,11 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object=
+Object="\"Object.Collision.BodyInstance\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -1325,5 +1418,12 @@ AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.
 IOSRuntimeSettings="\"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Collision.BodyInstance\" "
+SphereComponent="\"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" "
 
 
