fixed arena collisio

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -63,7 +63,7 @@ bBindSequencerToSimulate=True
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 bAutoCompileBlueprintsOnLaunch=True
 PlayNetMode=PIE_Standalone
@@ -140,8 +140,9 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/spherecollider.spherecollider
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Arena_obj.Arena_obj
+OpenAssetsAtExit=/Game/Hasiel/Maya_Map.Maya_Map
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
@@ -864,21 +865,21 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/spherecollider
-MRUItem1=/Game/sphereworldcollider
-MRUItem2=/Game/Arena_obj
-MRUItem3=/Game/Blueprints/NewGameMode
-MRUItem4=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem5=/Game/Scot/Scotts_UI/Menus/Settings_WG
-MRUItem6=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem7=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem8=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem9=/Game/Main_Menu
-MRUItem10=/Game/NewBlueprint
-MRUItem11=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
-MRUItem12=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem13=/Game/Scot/Scotts_UI/Enemy_Trace_WG
-MRUItem14=/Game/Hasiel/Maya_Map
+MRUItem0=/Game/Arena_obj
+MRUItem1=/Game/Hasiel/Maya_Map
+MRUItem2=/Game/spherecollider
+MRUItem3=/Game/sphereworldcollider
+MRUItem4=/Game/Blueprints/NewGameMode
+MRUItem5=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem6=/Game/Scot/Scotts_UI/Menus/Settings_WG
+MRUItem7=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem8=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem9=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem10=/Game/Main_Menu
+MRUItem11=/Game/NewBlueprint
+MRUItem12=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem13=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem14=/Game/Scot/Scotts_UI/Enemy_Trace_WG
 MRUItem15=/Game/Hasiel/NewMap
 MRUItem16=/Game/FlyingExampleMap
 
@@ -1306,6 +1307,8 @@ spherecollider_C.TransformCommon=True
 /Game/Scot/Scotts_UI/Menus/ArenaSelect_WG.ArenaSelect_WG=1
 /Game/Scot/Scotts_UI/Menus/Settings_WG.Settings_WG=1
 /Game/Scot/Scotts_UI/Menus/TournamentLadder_WG.TournamentLadder_WG=1
+/Game/spherecollider.spherecollider=1
+/Game/Arena_obj.Arena_obj=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/spherecollider.spherecollider;
@@ -1401,11 +1404,11 @@ PaperRuntimeSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bi
 TcpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Thrust,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object="\"Object.Collision.BodyInstance\" "
+Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -1418,11 +1421,11 @@ AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.
 IOSRuntimeSettings="\"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 
