--- a/Example project/Config/DefaultInput.ini
+++ b/Example project/Config/DefaultInput.ini
@@ -61,11 +61,11 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="LookUpRate",Scale=1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=Down)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
-+AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="Forwards_Backwards",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="Forwards_Backwards",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Forwards_Backwards",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="Forwards_Backwards",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Forwards_Backwards",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=Gamepad_LeftStick_Left)
