working menus (scott's)

--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,9 +107,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/Prototype/Arena
-MRUItem1=/Game/Hasiel/NewMap
-MRUItem2=/Game/FlyingExampleMap
+MRUItem0=/Game/MainMenu
+MRUItem1=/Game/Prototype/Arena
+MRUItem2=/Game/Hasiel/NewMap
+MRUItem3=/Game/FlyingExampleMap
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -138,20 +139,13 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Prototype/Arena
+LastLevel=/Game/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Arena_obj.Arena_obj
-OpenAssetsAtExit=/Game/Hasiel/Maya_Map.Maya_Map
-OpenAssetsAtExit=/Game/StarterContent/Particles/P_Smoke.P_Smoke
-OpenAssetsAtExit=/Game/Blueprints/NewPawn.NewPawn
+OpenAssetsAtExit=/Game/MainMenu.MainMenu:PersistentLevel.MainMenu
+OpenAssetsAtExit=/Game/GameJamGamemode.GameJamGamemode
 OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
-OpenAssetsAtExit=/Game/StarterContent/Particles/P_Sparks.P_Sparks
-OpenAssetsAtExit=/Game/HUD.HUD
-OpenAssetsAtExit=/Game/Scot/Scotts_UI/HUD_WG.HUD_WG
-OpenAssetsAtExit=/Game/Missile.Missile
-OpenAssetsAtExit=/Game/StarterContent/Particles/P_Fire.P_Fire
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
@@ -874,26 +868,26 @@ Uncategorized=False
 User Created=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/StarterContent/Particles/P_Fire
-MRUItem1=/Game/StarterContent/Particles/P_Smoke
-MRUItem2=/Game/Missile
-MRUItem3=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem4=/Game/HUD
-MRUItem5=/Game/StarterContent/Particles/P_Sparks
-MRUItem6=/Game/PlayerCharacter
-MRUItem7=/Game/Blueprints/NewPawn
-MRUItem8=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem9=/Game/Arena_obj
-MRUItem10=/Game/Hasiel/Maya_Map
-MRUItem11=/Game/spherecollider
-MRUItem12=/Game/sphereworldcollider
-MRUItem13=/Game/Blueprints/NewGameMode
-MRUItem14=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem15=/Game/Scot/Scotts_UI/Menus/Settings_WG
-MRUItem16=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem17=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem18=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem19=/Game/Main_Menu
+MRUItem0=/Game/PlayerCharacter
+MRUItem1=/Game/GameJamGamemode
+MRUItem2=/Game/MainMenu
+MRUItem3=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem4=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem5=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem6=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem7=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem8=/Game/StarterContent/Particles/P_Fire
+MRUItem9=/Game/StarterContent/Particles/P_Smoke
+MRUItem10=/Game/Missile
+MRUItem11=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem12=/Game/HUD
+MRUItem13=/Game/StarterContent/Particles/P_Sparks
+MRUItem14=/Game/Blueprints/NewPawn
+MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem16=/Game/Arena_obj
+MRUItem17=/Game/Hasiel/Maya_Map
+MRUItem18=/Game/spherecollider
+MRUItem19=/Game/sphereworldcollider
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1528,6 +1522,52 @@ ParticleModuleSpawn.Burst=True
 ParticleModuleSpawn.Cascade=True
 ParticleModuleLocationPrimitiveSphere.Location=True
 ParticleModuleLocationPrimitiveSphere.Cascade=True
+TournamentLadder_WG_C.Appearance=True
+TournamentLadder_WG_C.Designer=True
+TournamentLadder_WG_C.Input=True
+TournamentLadder_WG_C.Interaction=True
+TournamentLadder_WG_C.Performance=True
+TournamentLadder_WG_C.Layout=True
+TournamentLadder_WG_C.Behavior=True
+TournamentLadder_WG_C.Render Transform=True
+TournamentLadder_WG_C.Clipping=True
+TournamentLadder_WG_C.Navigation=True
+Highscores_WG_C.Appearance=True
+Highscores_WG_C.Designer=True
+Highscores_WG_C.Input=True
+Highscores_WG_C.Interaction=True
+Highscores_WG_C.Performance=True
+Highscores_WG_C.Layout=True
+Highscores_WG_C.Behavior=True
+Highscores_WG_C.Render Transform=True
+Highscores_WG_C.Clipping=True
+Highscores_WG_C.Navigation=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Input=True
+MainMenu_C.Actor=True
+GameJamGamemode_C.Tick=True
+GameJamGamemode_C.GameMode=True
+GameJamGamemode_C.Classes=True
+GameJamGamemode_C.Game=True
+REINST_PlayerCharacter_C_70.None=True
+REINST_PlayerCharacter_C_70.Tick=True
+REINST_PlayerCharacter_C_70.Character=True
+REINST_PlayerCharacter_C_70.Camera=True
+REINST_PlayerCharacter_C_70.Pawn=True
+REINST_PlayerCharacter_C_70.Rendering=True
+REINST_PlayerCharacter_C_70.Replication=True
+REINST_PlayerCharacter_C_70.Input=True
+REINST_PlayerCharacter_C_70.Actor=True
+REINST_PlayerCharacter_C_78.None=True
+REINST_PlayerCharacter_C_78.Tick=True
+REINST_PlayerCharacter_C_78.Character=True
+REINST_PlayerCharacter_C_78.Camera=True
+REINST_PlayerCharacter_C_78.Pawn=True
+REINST_PlayerCharacter_C_78.Rendering=True
+REINST_PlayerCharacter_C_78.Replication=True
+REINST_PlayerCharacter_C_78.Input=True
+REINST_PlayerCharacter_C_78.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=1
@@ -1662,16 +1702,16 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Lighting.LightingChannels\" "
-SceneComponent="\"Object.Lighting.LightingChannels\" "
-ActorComponent="\"Object.Lighting.LightingChannels\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 Light="\"Object.Light.LightComponent.Object.Light.LightColor\" "
 PlayerCharacter_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
-Character=
-Pawn=
+Character="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_136="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_144="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_152="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -1692,6 +1732,8 @@ ParticleModuleSize="\"Object.Size.StartSize.Distribution\" "
 ParticleModuleLocationPrimitiveSphere="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+REINST_PlayerCharacter_C_70="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_PlayerCharacter_C_78="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [/Script/UnrealEd.FbxImportUI]
 LodDistance0=0.000000
