--- a/Example project/Saved/Config/Windows/Engine.ini
+++ b/Example project/Saved/Config/Windows/Engine.ini
@@ -35,11 +35,11 @@ JavaPath=(Path="")
 WindowMirrorMode=1
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=False
+ToggleKeysConfirmation=False
+FilterKeysConfirmation=False
 
 
