--- a/Example project 4.21/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project 4.21/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -67,17 +67,27 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [MRU]
 MRUItem0=/Game/Level_GameMode/Arena
-MRUItem1=/Game/Prototype/Arena
-MRUItem2=/Game/MainMenu
+MRUItem1=/Game/FlyingExampleMap
+MRUItem2=/Game/Prototype/Arena
+MRUItem3=/Game/MainMenu
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,
 
 [EditorStartup]
-LastLevel=/Game/Prototype/Arena
+LastLevel=/Game/Level_GameMode/Arena
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Enemy/GunBarrel.GunBarrel
+OpenAssetsAtExit=/Game/Enemy/GunBarrel_Inst.GunBarrel_Inst
+OpenAssetsAtExit=/Game/Enemy/MainBody.MainBody
+OpenAssetsAtExit=/Game/Enemy/Drone.Drone
+OpenAssetsAtExit=/Game/StarterContent/Textures/T_Metal_Aluminum_D.T_Metal_Aluminum_D
+OpenAssetsAtExit=/Game/Enemy/GunHolder.GunHolder
+OpenAssetsAtExit=/Game/Character/RedShip.RedShip
 
 [DetailCategories]
 Missile_C.TransformCommon=True
@@ -198,13 +208,231 @@ Arena_C.Tick=True
 Arena_C.Replication=True
 Arena_C.Input=True
 Arena_C.Actor=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.LodSettings=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.Thumbnail=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+MaterialExpressionScalarParameter.General=True
+MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
+MaterialExpressionScalarParameter.MaterialExpression=True
+MaterialExpressionVectorParameter.General=True
+MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
+MaterialExpressionVectorParameter.MaterialExpression=True
+MaterialExpressionMultiply.MaterialExpressionMultiply=True
+MaterialExpressionMultiply.MaterialExpression=True
+Texture2D.Compression=True
+Texture2D.LevelOfDetail=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.Compositing=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.EditableMesh=True
+StaticMesh.Navigation=True
+MaterialExpression.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionAdd.MaterialExpressionAdd=True
+MaterialExpressionAdd.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Prototype/Arena
-MRUItem1=/Game/MainMenu
+MRUItem0=/Game/Character/RedBody
+MRUItem1=/Game/Character/RedShip
 MRUItem2=/Game/PlayerCharacter
+MRUItem3=/Game/Enemy/GunHolder
+MRUItem4=/Game/StarterContent/Textures/T_Metal_Aluminum_D
+MRUItem5=/Game/Enemy/Drone
+MRUItem6=/Game/Enemy/MainBody
+MRUItem7=/Game/Enemy/GunBarrel_Inst
+MRUItem8=/Game/StarterContent/Textures/T_Metal_Gold_D
+MRUItem9=/Game/Enemy/GunBarrel
+MRUItem10=/Game/Level_GameMode/Arena
+MRUItem11=/Game/FlyingExampleMap
+MRUItem12=/Game/Prototype/Arena
+MRUItem13=/Game/MainMenu
 
 [AssetEditorToolkitTabLocation]
 /Game/PlayerCharacter.PlayerCharacter=1
+/Game/StarterContent/Textures/T_Metal_Gold_D.T_Metal_Gold_D=1
+/Game/Character/RedBody.RedBody=1
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bUseUnsortedMenus=False
+
+[/Script/UnrealEd.FbxImportUI]
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+AnimationLength=FBXALIT_ExportedTime
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[MessageLog]
+LastLogListing=FBXImport
+
+[PlacementMode]
+RecentlyPlaced=/Game/Enemy/Drone.Drone;
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=1
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
 
 
