--- a/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Example project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -78,8 +78,8 @@ CreateAudioDeviceForEveryPlayer=False
 ClientWindowHeight=480
 AdditionalServerGameOptions=
 AdditionalLaunchOptions=
-MultipleInstanceLastHeight=0
-MultipleInstanceLastWidth=0
+MultipleInstanceLastHeight=720
+MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@TU46936
 LastExecutedLaunchName=TU46936
 LastExecutedPIEPreviewDevice=
@@ -107,8 +107,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/MainMenu
-MRUItem1=/Game/Prototype/Arena
+MRUItem0=/Game/Prototype/Arena
+MRUItem1=/Game/MainMenu
 MRUItem2=/Game/Hasiel/NewMap
 MRUItem3=/Game/FlyingExampleMap
 
@@ -143,6 +143,7 @@ LastLevel=/Game/Prototype/Arena
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/PlayerCharacter.PlayerCharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=220.000
@@ -866,25 +867,25 @@ User Created=False
 
 [ContentBrowserRecent]
 MRUItem0=/Game/PlayerCharacter
-MRUItem1=/Game/GameJamGamemode
-MRUItem2=/Game/MainMenu
-MRUItem3=/Game/Scot/Scotts_UI/Menus/Highscores_WG
-MRUItem4=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
-MRUItem5=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
-MRUItem6=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
-MRUItem7=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
-MRUItem8=/Game/StarterContent/Particles/P_Fire
-MRUItem9=/Game/StarterContent/Particles/P_Smoke
-MRUItem10=/Game/Missile
-MRUItem11=/Game/Scot/Scotts_UI/HUD_WG
-MRUItem12=/Game/HUD
-MRUItem13=/Game/StarterContent/Particles/P_Sparks
-MRUItem14=/Game/Blueprints/NewPawn
-MRUItem15=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem16=/Game/Arena_obj
-MRUItem17=/Game/Hasiel/Maya_Map
-MRUItem18=/Game/spherecollider
-MRUItem19=/Game/sphereworldcollider
+MRUItem1=/Game/Character/RedShip
+MRUItem2=/Game/Enemy/Enemy
+MRUItem3=/Game/Enemy/Drone
+MRUItem4=/Game/GameJamGamemode
+MRUItem5=/Game/MainMenu
+MRUItem6=/Game/Scot/Scotts_UI/Menus/Highscores_WG
+MRUItem7=/Game/Scot/Scotts_UI/Menus/MainMenu_WG
+MRUItem8=/Game/Scot/Scotts_UI/Menus/TournamentLadder_WG
+MRUItem9=/Game/Scot/Scotts_UI/Menus/ArenaSelect_WG
+MRUItem10=/Game/Scot/Scotts_UI/Menus/CharaterSelect_WG
+MRUItem11=/Game/StarterContent/Particles/P_Fire
+MRUItem12=/Game/StarterContent/Particles/P_Smoke
+MRUItem13=/Game/Missile
+MRUItem14=/Game/Scot/Scotts_UI/HUD_WG
+MRUItem15=/Game/HUD
+MRUItem16=/Game/StarterContent/Particles/P_Sparks
+MRUItem17=/Game/Blueprints/NewPawn
+MRUItem18=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem19=/Game/Arena_obj
 
 [DetailCategories]
 StaticMesh.StaticMeshMaterials=True
@@ -1565,6 +1566,20 @@ REINST_PlayerCharacter_C_78.Rendering=True
 REINST_PlayerCharacter_C_78.Replication=True
 REINST_PlayerCharacter_C_78.Input=True
 REINST_PlayerCharacter_C_78.Actor=True
+Enemy_C.Tick=True
+Enemy_C.Rendering=True
+Enemy_C.Replication=True
+Enemy_C.Input=True
+Enemy_C.Actor=True
+REINST_PlayerCharacter_C_39.None=True
+REINST_PlayerCharacter_C_39.Tick=True
+REINST_PlayerCharacter_C_39.Character=True
+REINST_PlayerCharacter_C_39.Camera=True
+REINST_PlayerCharacter_C_39.Pawn=True
+REINST_PlayerCharacter_C_39.Rendering=True
+REINST_PlayerCharacter_C_39.Replication=True
+REINST_PlayerCharacter_C_39.Input=True
+REINST_PlayerCharacter_C_39.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Hasiel/Maya_Map.Maya_Map=1
@@ -1684,7 +1699,7 @@ StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompo
 
 [DetailPropertyExpansion]
 ConsoleSettings="\"Object.Colors.InputColor\" \"Object.Colors.HistoryColor\" \"Object.Colors.AutoCompleteCommandColor\" \"Object.Colors.AutoCompleteCVarColor\" \"Object.Colors.AutoCompleteFadedColor\" "
-Object="\"Object.Appearance.Brush\" "
+Object="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" "
@@ -1697,11 +1712,11 @@ AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.
 IOSRuntimeSettings="\"Object.Audio.Audio"
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 DirectionalLight="\"Object.Light.LightComponent.Object.Light.LightColor\" "
@@ -1731,6 +1746,7 @@ ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 REINST_PlayerCharacter_C_70="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_PlayerCharacter_C_78="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_PlayerCharacter_C_39="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
